# catdoc

./: INSTALL  NEWS  configure  configure.in  meson.build  meson_options.txt
charsets/: meson.build
doc/: Makefile.in  catdoc.1.in  meson.build
src/: analyze.c  catdoc.c  catdoc.h  catppt.c  charsets.c  confutil.c  fileutil.c  makefile.tc  meson.build  ole.c  ole.h  pptparse.c  reader.c  rtfread.c  sheet.c  substmap.c  wordview.tcl.in  writer.c  xls2csv.c  xlsparse.c
